added final css

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
-  background-color: red;
+  background-color: #ffcbcb;
 }
 .App-header {
-  margin: 30px 0;
+  margin: 15px 0;
 }
 .App-footer {
   text-align: center;
