--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -2,8 +2,12 @@
   background: white;
   padding: 30px;
   border-radius: 8px;
-  box-shadow: 0 10px 10px rgb(0 0 0 / 10%);
+  box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
   margin: 20px 0;
+}
+.Dictionary h1 {
+  font-size: 20px;
+  font-weight: bold;
 }
 .Dictionary input {
   width: 100%;
